[project]
name = "getaround-dashboard"
version = "0.1.0"
description = "Getaround delay analysis dashboard"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit~=1.40.0",
    "pandas~=2.2.0",
    "openpyxl~=3.1.0",
    "pydantic~=2.10.0",
    "pydantic-settings~=2.10.0",
    "numpy~=1.26.0",
    "plotly~=5.24.0",
    "httpx~=0.27.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "jupyter",
    "ipykernel",
    "factory-boy>=3.3.3",
    "mlflow~=2.19.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "integration: integration tests requiring model file and data",
]
